--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1959,3 +1959,263 @@ a {
     line-height: 1.5;
     color: rgba(133, 139, 147, 0.6);
 }
+
+/* Quote */
+.quote {
+    margin-top: 140px;
+}
+
+.quote__container {
+    width: 1219px;
+}
+
+.quote__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 32px;
+}
+
+.quote-item {
+    position: relative;
+    padding: 30px 40px;
+    background: #131517;
+    border: 1px solid #282c30;
+    border-radius: 10px;
+    transition: 0.25s;
+}
+
+.quote-item:hover {
+    background: #282c30;
+    cursor: pointer;
+}
+
+.quote-item:hover .quote-item__icons {
+    color: #0cce84;
+    transform: rotate(180deg);
+}
+
+.quote-item__icons {
+    margin-left: 215px;
+    color: #282c30;
+    transition: 0.25s;
+}
+
+/* .quote-icon {
+    color: #282c30;
+} */
+
+.quote-item__paragraph {
+    width: 304px;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.62;
+    color: rgba(133, 139, 147, 0.8);
+    margin-top: 26px;
+}
+
+.quote-item__people {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 22px;
+}
+
+.quote-group {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.quote-group__avatar {
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.quote-group__text {
+    display: flex;
+    flex-direction: column;
+}
+
+.quote-name {
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.56;
+    color: #f9f9f9;
+}
+
+.quote-job {
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: #858b93;
+}
+
+.quote__control {
+    margin-top: 50px;
+    margin-right: 61px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 50px;
+}
+
+.quote__btn {
+    border: none;
+    outline: none;
+    background: transparent;
+    color: #858b93;
+    transition: 0.25s;
+}
+
+.quote__btn:hover {
+    color: #ef8f00;
+    cursor: pointer;
+}
+
+/* Footer */
+.footer {
+    margin-top: 165px;
+    background: #0d1012;
+}
+
+.footer__inner {
+    padding: 67px 0 148px;
+}
+
+.footer__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer__logo {
+    margin-left: 21px;
+}
+
+.footer__start {
+    margin-right: 58px;
+}
+
+.footer__start-text {
+    font-weight: 600;
+    font-size: 2.2rem;
+    line-height: 1.45;
+    color: #858b93;
+}
+
+.footer__start-btn {
+    width: 165px;
+    height: 55px;
+    background: linear-gradient(90deg, #eb9204 -33.14%, #83e868 116.38%);
+    border-radius: 9px;
+    margin-left: 54px;
+}
+
+.footer__border {
+    width: 1096px;
+    height: 1px;
+    background: #272633;
+    margin-top: 37px;
+}
+
+.footer__bottom {
+    margin-top: 70px;
+    display: flex;
+}
+
+.footer__heading {
+    font-weight: 600;
+    font-size: 2.2rem;
+    line-height: 1.45;
+    color: #f9f9f9;
+}
+
+.subscribe-form {
+    position: relative;
+    margin-top: 44px;
+    width: 307px;
+    height: 51px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: transparent;
+    border-radius: 99px;
+}
+
+.subscribe-form__input {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #272633;
+    outline: none;
+    border-radius: inherit;
+    padding: 0 22px;
+    font-size: 1.4rem;
+    background: inherit;
+    color: #858b93;
+}
+
+.subscribe-form__submit {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 38px;
+    height: 38px;
+    margin-right: -1px;
+    background: linear-gradient(90deg, #eb9204 -33.14%, #83e868 116.38%);
+    border: none;
+    outline: none;
+    border-radius: 50%;
+    right: 7px;
+}
+
+.social-list {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    margin-top: 45px;
+}
+
+.social-item {
+    width: 38px;
+    height: 38px;
+    background: #272633;
+    backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.footer__bottom-right {
+    margin-left: 170px;
+}
+
+.footer__row {
+    display: flex;
+}
+
+.footer__column {
+    display: block;
+}
+
+.footer__column:nth-child(1) {
+    margin-right: 55px;
+}
+
+.footer__column:nth-child(2) {
+    margin-right: 87px;
+}
+
+.footer__list {
+    margin-top: 22px;
+}
+
+.footer__link {
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 2.11;
+    color: rgba(133, 139, 147, 0.6);
+}
